Bug 128644 - after creating image, k3b does not to eject cd rom, which it is copying and then stops
Summary: after creating image, k3b does not to eject cd rom, which it is copying and ...
Status: RESOLVED FIXED
Alias: None
Product: k3b
Classification: Applications
Component: general (show other bugs)
Version: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Sebastian Trueg
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-06-05 02:09 UTC by chris Horsting
Modified: 2006-06-21 10:17 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description chris Horsting 2006-06-05 02:09:28 UTC
Version:            (using KDE KDE 3.5.2)
Installed from:    Fedora RPMs
OS:                Linux

I am using Fedora 4.0. K3B makes an image of the CD.  When the image is complete, it fail to eject the CD it is copy and then it gives an error. Here is the output from the debug screen: 
 System
-----------------------
K3b Version: 0.12.14

KDE Version: 3.5.2-0.1.fc4 Red Hat
QT Version:  3.3.4
Kernel:      2.6.16-1.2108_FC4
Devices
-----------------------
SONY CD-RW  CRX230ED 4YS1 (/dev/hdc, ) at /media/cdrecorder [CD-R; CD-RW; CD-ROM] [CD-ROM; CD-R; CD-RW] [SAO; TAO; RAW; SAO/R96P; SAO/R96R; RAW/R16; RAW/R96P; RAW/R96R]

I asked around, some people say that this looks like that the system is self mounting.  However, I did stop the autofs daemon.  Also, I am interested to know, what is this dtd dicer toaster daemon. I can't find it on  serviceconf.  If this daemon exits, how do I start it? Because under the documentation, it calls for starting dtd.
Thanks
Comment 1 Sebastian Trueg 2006-06-05 19:56:59 UTC
forget the dtd dicer deamon. it does not exists. It is simply a placeholder 
for missing dicumentation.
As for automounting: it is probably not done via autofs but some other system 
like supermount or subfs. I don't know which system fedora is using.

This will get bett in k3b 1.0
Comment 2 Sebastian Trueg 2006-06-21 10:17:58 UTC
SVN commit 553487 by trueg:

Allow the user to eject the source disk manually if it fails.

BUG: 128644


 M  +4 -3      k3bcdcopyjob.cpp  
 M  +1 -6      k3bdvdcopyjob.cpp  


--- trunk/extragear/multimedia/k3b/libk3b/jobs/k3bcdcopyjob.cpp #553486:553487
@@ -921,6 +921,9 @@
       d->cdrecordWriter->addArgument( d->imageNames[d->toc.count()-1] );
     else
       d->cdrecordWriter->addArgument( d->imageNames[d->currentWrittenSession-1] );
+
+    // clear cd text from previous sessions
+    d->cdrecordWriter->setRawCdText( QByteArray() );
   }
 
 
@@ -959,9 +962,7 @@
 	    // becasue if it did not it might happen that k3b overwrites a CD-RW
 	    // source)
 	    if( !m_readerDevice->eject() ) {
-	      emit infoMessage( i18n("Unable to eject media."), ERROR );
-	      finishJob( false, true );
-	      return;
+	      blockingInformation( i18n("K3b was unable to eject the source disk. Please do so manually.") );
 	    }
 	  }
 	  
--- trunk/extragear/multimedia/k3b/libk3b/jobs/k3bdvdcopyjob.cpp #553486:553487
@@ -522,12 +522,7 @@
 	// because if it did not it might happen that k3b overwrites a CD-RW
 	// source)
 	if( !m_readerDevice->eject() ) {
-	  emit infoMessage( i18n("Unable to eject media."), ERROR );
-	  if( m_removeImageFiles )
-	    removeImageFiles();
-	  d->running = false;
-	  emit finished(false);
-	  return;
+	  blockingInformation( i18n("K3b was unable to eject the source disk. Please do so manually.") );
 	}
       }