Allow the user to eject the source disk manually if it fails.

BUG: 128644

svn path=/trunk/extragear/multimedia/k3b/; revision=553487